--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,7 @@
 [submodule "ui"]
 	path = packages/ui
 	url = git@github.com:hypertype/ui
+
+[submodule "tools"]
+	path = packages/tools
+	url = git@github.com:hypertype/tools
