--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -b --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.3.3",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.15",
@@ -24,10 +24,14 @@
     "mocha-typescript": "^1.1.17",
     "string-loader": "0.0.1",
     "ts-mocha": "^2.0.0",
+    "typescript": "^3.3.3",
     "webpack": "^4.27.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-node-externals": "^1.7.2"
+  },
+  "dependencies": {
+    "npm-publish-scripts": "^4.1.16"
   }
 }
