--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,10 @@
     }
   },
   "references": [
-    { "path": "../packages/app" },
-    { "path": "../packages/core" },
-    { "path": "../packages/domain" },
-    { "path": "../packages/infr" },
-    { "path": "../packages/ui" }
+    { "path": "./packages/app" },
+    { "path": "./packages/core" },
+    { "path": "./packages/domain" },
+    { "path": "./packages/infr" },
+    { "path": "./packages/ui" }
   ]
 }
