--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "files": [],
-  "include": [],
+  "include": [
+//    "**/*.ts"
+  ],
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "outDir": "dist/esm",
     "baseUrl": "..",
     "composite": true,
     "target": "es5",
