--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "lerna": "^3.16.4",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mocha": "^5.2.0",
