--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "outDir": "dist/esm",
-    "baseUrl": "..",
+    "baseUrl": ".",
     "composite": true,
     "target": "es5",
     "paths": {
@@ -18,6 +18,11 @@
     { "path": "./packages/core" },
     { "path": "./packages/domain" },
     { "path": "./packages/infr" },
-    { "path": "./packages/ui" }
+    { "path": "./packages/infr-node" },
+    { "path": "./packages/infr-browser" },
+    { "path": "./packages/ui" },
+  ],
+  "files": [
+
   ]
 }
