--- a/packages/infr-browser/tsconfig.json
+++ b/packages/infr-browser/tsconfig.json
@@ -25,10 +25,7 @@
   ],
   "references": [
     {
-      "path": "../"
-    },
-    {
-      "path": "../../core"
+      "path": "../core"
     }
   ],
   "exclude": [
