--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@hypertype/tools": "^3.0.1",
     "@types/luxon": "^1.12.0",
-    "@types/node": "^11.13.2",
+    "@types/node": "latest",
     "crc-32": "latest",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.2"
