--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -48,8 +48,8 @@
     "@hypertype/core": "^3.0.1",
     "@hypertype/infr": "^3.0.1",
     "@hypertype/tools": "^3.0.1",
-    "@types/node": "^12.7.9",
-    "typescript": "^3.6.3"
+    "@types/node": "latest",
+    "typescript": "latest"
   },
   "hypertype": {
     "lib": {
