--- a/packages/infr-node/tsconfig.json
+++ b/packages/infr-node/tsconfig.json
@@ -22,10 +22,7 @@
   },
   "references": [
     {
-      "path": "../"
-    },
-    {
-      "path": "../../core"
+      "path": "../core"
     }
   ],
   "include": [
