--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -47,14 +47,14 @@
     "node-libs-browser": "^2.2.0",
     "string-loader": "0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.3.3333",
+    "typescript": "latest",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@types/node": "^11.11.3",
-    "typescript": "^3.5.3"
+    "@types/node": "latest",
+    "typescript": "latest"
   }
 }
