--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -14,7 +14,8 @@
   "files": [
     "test",
     "generate",
-    "build"
+    "build",
+    "bin.js"
   ],
   "bundledDependencies": [
     "@types/chai",
