--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b --watch",
+    "bundle": "lerna run bundle:prod",
     "publish": "lerna publish patch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lerna": "^3.16.4"
+    "lerna": "^3.19.0"
   },
   "dependencies": {}
 }
