--- a/packages/infr-browser/package.json
+++ b/packages/infr-browser/package.json
@@ -7,7 +7,8 @@
   "bundle": "dist/bundle/index.js",
   "typings": "dist/typings/index.d.ts",
   "scripts": {
-    "bundle": "hypertype",
+    "bundle": "hypertype lib",
+    "bundle:prod": "hypertype lib --prod",
     "build": "tsc -b --watch",
     "deploy": "npm version patch && npm publish",
     "test": "jest"
@@ -50,7 +51,7 @@
   },
   "hypertype": {
     "lib": {
-      "index": "index.ts"
+      "index": "./dist/esm/index.js"
     }
   }
 }
