--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -6,10 +6,10 @@
     "declarationMap": true,
     "composite": true,
     "declaration": true,
-    "outDir": "./dist",
-    "declarationDir": "./dist",
+    "outDir": "./dist/esm",
+    "declarationDir": "./dist/typings",
     "baseUrl": "..",
-    "target": "es6",
+    "target": "es2015",
     "module": "commonjs",
     "types": [
       "node"
