--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
+  "version": "3.2.5",
   "packages": [
     "packages/*"
   ],
-  "version": "3.2.5"
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
