--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@hypertype/hypertype",
   "version": "2.1.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc -b --watch",
@@ -14,5 +13,9 @@
   "devDependencies": {
     "lerna": "^3.19.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ]
 }
