--- a/packages/infr-browser/package.json
+++ b/packages/infr-browser/package.json
@@ -7,9 +7,9 @@
   "bundle": "dist/bundle/index.js",
   "typings": "dist/typings/index.d.ts",
   "scripts": {
+    "build": "tsc -b --watch",
     "bundle": "hypertype lib",
     "bundle:prod": "hypertype lib --prod",
-    "build": "tsc -b --watch",
     "deploy": "npm version patch && npm publish",
     "test": "jest"
   },
@@ -39,15 +39,15 @@
       }
     }
   },
-  "bundleDependencies": [],
   "peerDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest"
+    "@hypertype/core": "",
+    "@hypertype/infr": ""
   },
   "devDependencies": {
     "@hypertype/core": "^3.2.3",
     "@hypertype/infr": "^3.2.5",
-    "@hypertype/tools": "^3.2.3"
+    "@hypertype/tools": "^3.2.3",
+    "@types/node": "11.13.19"
   },
   "hypertype": {
     "lib": {
