--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@testdeck/jest": "0.0.6",
     "@types/chai": "^4.1.7",
+    "@types/node": "11.13.19",
     "awesome-typescript-loader": "^5.2.1",
     "chai": "^4.2.0",
     "css-loader": "^2.1.1",
@@ -49,14 +50,12 @@
     "node-libs-browser": "^2.2.0",
     "string-loader": "0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "latest",
+    "typescript": "^3.7.4",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@types/node": "latest",
-    "typescript": "latest"
   }
 }
