--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/ui",
-  "version": "3.2.3",
+  "version": "3.2.6",
   "description": "",
   "main": "dist/index.es5.js",
   "es5": "dist/index.es5.js",
@@ -33,8 +33,8 @@
     "@hypertype/core": ""
   },
   "devDependencies": {
-    "@hypertype/core": "*",
-    "@hypertype/tools": "*",
+    "@hypertype/core": "^3.2.6",
+    "@hypertype/tools": "^3.2.6",
     "@types/node": "11.13.19",
     "hypertype": "0.0.0-beta.1",
     "typescript": "^3.7.4"
