--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -51,15 +51,17 @@
     "@hypertype/infr": "",
     "@hypertype/ui": ""
   },
+  "dependencies": {
+	"redux": "*",
+    "router5": "*",
+    "router5-plugin-browser": "*"
+  },
   "devDependencies": {
     "@hypertype/core": "^3.3.5",
     "@hypertype/infr": "^3.3.5",
     "@hypertype/tools": "^3.3.5",
     "@hypertype/ui": "^3.3.7",
     "@types/node": "11.13.19",
-    "redux": "*",
-    "router5": "*",
-    "router5-plugin-browser": "*",
     "typescript": "^3.7.4"
   },
   "hypertype": {
