--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -40,8 +40,10 @@
     }
   },
   "peerDependencies": {
-    "@hypertype/core": "",
-    "@hypertype/infr": ""
+    "@hypertype/core": "^3.3.9",
+    "@hypertype/infr": "^3.3.9",
+    "@types/node": "11.13.19",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "@hypertype/core": "^3.3.9",
