--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,7 +47,7 @@
   "devDependencies": {
     "@hypertype/tools": "^3.3.9",
     "@types/luxon": "^1.12.0",
-    "@types/node": "11.13.19",
+    "@types/node": "11.13.19"
   },
   "dependencies": {
     "luxon": "^1.12.1",
