--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -43,14 +43,14 @@
     "@hypertype/core": "^3.3.9",
     "@hypertype/infr": "^3.3.9",
     "@types/node": "11.13.19",
-    "typescript": "^3.7.4"
+    "typescript": "3.7.4"
   },
   "devDependencies": {
     "@hypertype/core": "^3.3.10",
     "@hypertype/infr": "^3.3.10",
     "@hypertype/tools": "^3.3.10",
     "@types/node": "11.13.19",
-    "typescript": "^3.7.4"
+    "typescript": "3.7.4"
   },
   "hypertype": {
     "lib": {
