--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -51,7 +51,7 @@
     "node-libs-browser": "^2.2.0",
     "string-loader": "0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.4",
+    "typescript": "3.7.4",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-dev-server": "^3.2.1",
