--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,14 +44,14 @@
     "crc-32",
     "reflect-metadata"
   ],
+  "peerDependencies": {
+    "luxon": "^1.12.1"
+  },
   "devDependencies": {
     "@hypertype/tools": "^3.3.11",
     "@types/luxon": "^1.12.0",
-    "@types/node": "11.13.19"
-  },
-  "dependencies": {
+    "@types/node": "11.13.19",
     "crc-32": "*",
-    "luxon": "^1.12.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.2"
   },
