--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -41,8 +41,11 @@
   "bundledDependencies": [
     "redux",
     "router5",
+    "route-node",
     "router5-plugin-browser",
-    "router5-transition-path"
+    "router5-transition-path",
+    "symbol-observable",
+    "loose-envify"
   ],
   "optionalDependencies": {
     "redux-devtools-extension": "*"
@@ -52,18 +55,19 @@
     "@hypertype/infr": "",
     "@hypertype/ui": ""
   },
-  "dependencies": {
-    "redux": "*",
-    "router5": "*",
-    "router5-plugin-browser": "*",
-    "router5-transition-path": "*"
-  },
   "devDependencies": {
     "@hypertype/core": "^3.3.14",
     "@hypertype/infr": "^3.3.14",
     "@hypertype/tools": "^3.3.14",
     "@hypertype/ui": "^3.3.14",
     "@types/node": "11.13.19",
+    "loose-envify": "1.4.0",
+    "redux": "4.0.5",
+    "route-node": "4.1.1",
+    "router5": "8.0.1",
+    "router5-plugin-browser": "8.0.1",
+    "router5-transition-path": "8.0.1",
+    "symbol-observable": "1.2.0",
     "typescript": "3.7.4"
   },
   "hypertype": {
