--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -40,15 +40,15 @@
     }
   },
   "peerDependencies": {
-    "@hypertype/core": "^3.3.9",
-    "@hypertype/infr": "^3.3.9",
+    "@hypertype/core": "latest",
+    "@hypertype/infr": "latest",
     "@types/node": "11.13.19",
     "typescript": "3.7.4"
   },
   "devDependencies": {
-    "@hypertype/core": "^3.3.14",
-    "@hypertype/infr": "^3.3.14",
-    "@hypertype/tools": "^3.3.14",
+    "@hypertype/core": "latest",
+    "@hypertype/infr": "latest",
+    "@hypertype/tools": "latest",
     "@types/node": "11.13.19",
     "typescript": "3.7.4"
   },
