--- a/packages/infr/package.json
+++ b/packages/infr/package.json
@@ -42,11 +42,11 @@
     }
   },
   "peerDependencies": {
-    "@hypertype/core": ""
+    "@hypertype/core": "latest"
   },
   "devDependencies": {
-    "@hypertype/core": "^3.3.14",
-    "@hypertype/tools": "^3.3.14",
+    "@hypertype/core": "latest",
+    "@hypertype/tools": "latest",
     "@types/node": "11.13.19"
   },
   "hypertype": {
