--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -7,7 +7,15 @@
     "declaration": true,
     "noEmitOnError": true,
     "moduleResolution": "node",
-    "target": "es2018"
+    "target": "es2018",
+    "lib": [
+      "WebWorker",
+      "ESNext"
+    ],
+    "types": [
+      "@types/sharedworker",
+      "@types/node"
+    ]
   },
   "include": [
     "**/*.ts"
