--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/core",
-  "version": "3.3.17",
+  "version": "3.3.18",
   "description": "",
   "main": "dist/esm/index.js",
   "bundle": "dist/bundle/index.js",
@@ -51,10 +51,10 @@
     "@hypertype/tools": "latest",
     "@types/luxon": "^1.12.0",
     "@types/node": "11.13.19",
-    "symbol-observable": "^1.2.0",
     "crc-32": "*",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.2"
+    "rxjs": "^6.5.2",
+    "symbol-observable": "^1.2.0"
   },
   "hypertype": {
     "lib": {
