--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,12 +39,12 @@
     "canvas": "^2.6.1"
   },
   "devDependencies": {
-    "@hypertype/core": "^3.3.21",
-    "@hypertype/infr": "^3.3.18",
-    "@hypertype/infr-node": "^3.3.20",
-    "@hypertype/tools": "^3.3.20",
+    "@hypertype/core": "latest",
+    "@hypertype/infr": "latest",
+    "@hypertype/infr-node": "latest",
+    "@hypertype/tools": "latest",
     "@types/express": "^4.17.0",
-    "@types/node": "^10.14.19",
+    "@types/node": "^11.13.19",
     "@types/redis": "^2.8.14",
     "@types/workerpool": "^2.3.1",
     "@types/ws": "^6.0.2",
