--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -47,15 +47,15 @@
     "redux-devtools-extension": "*"
   },
   "peerDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest",
-    "@hypertype/ui": "latest"
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1",
+    "@hypertype/ui": "^3.4.1"
   },
   "devDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest",
-    "@hypertype/tools": "latest",
-    "@hypertype/ui": "latest",
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1",
+    "@hypertype/tools": "^3.4.1",
+    "@hypertype/ui": "^3.4.1",
     "@types/node": "11.13.19",
     "@types/redux": "latest",
     "@types/router5": "latest",
