--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,7 +48,7 @@
     "luxon": "^1.12.1"
   },
   "devDependencies": {
-    "@hypertype/tools": "latest",
+    "@hypertype/tools": "^3.4.1",
     "@types/luxon": "^1.12.0",
     "@types/node": "11.13.19",
     "crc-32": "*",
