--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -9,6 +9,7 @@
     "build": "tsc -b --watch",
     "bundle": "hypertype lib",
     "bundle:prod": "hypertype lib --prod",
+    "bundle:watch": "hypertype lib --watch",
     "bundle:prod:stats": "hypertype lib --prod --stats",
     "deploy": "npm version patch && npm publish",
     "test": "jest"
@@ -40,15 +41,15 @@
     }
   },
   "peerDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest",
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1",
     "@types/node": "11.13.19",
     "typescript": "3.7.4"
   },
   "devDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest",
-    "@hypertype/tools": "latest",
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1",
+    "@hypertype/tools": "^3.4.1",
     "@types/node": "11.13.19",
     "@types/sharedworker": "latest",
     "typescript": "3.7.4"
