--- a/packages/infr-browser/package.json
+++ b/packages/infr-browser/package.json
@@ -40,13 +40,13 @@
     }
   },
   "peerDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest"
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1"
   },
   "devDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest",
-    "@hypertype/tools": "latest",
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1",
+    "@hypertype/tools": "^3.4.1",
     "@types/node": "11.13.19"
   },
   "hypertype": {
