--- a/packages/infr-node/package.json
+++ b/packages/infr-node/package.json
@@ -40,14 +40,14 @@
   },
   "bundleDependencies": [],
   "peerDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest",
-    "@hypertype/tools": "latest"
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1",
+    "@hypertype/tools": "^3.4.1"
   },
   "devDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest",
-    "@hypertype/tools": "latest"
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1",
+    "@hypertype/tools": "^3.4.1"
   },
   "dependencies": {
     "eventsource": "*",
