--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,10 +39,10 @@
     "canvas": "^2.6.1"
   },
   "devDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/infr": "latest",
-    "@hypertype/infr-node": "latest",
-    "@hypertype/tools": "latest",
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/infr": "^3.4.1",
+    "@hypertype/infr-node": "^3.4.1",
+    "@hypertype/tools": "^3.4.1",
     "@types/express": "^4.17.0",
     "@types/node": "^11.13.19",
     "@types/redis": "^2.8.14",
