--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,14 +30,14 @@
   },
   "homepage": "https://github.com/hypertype/ui#readme",
   "peerDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/tools": "latest",
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/tools": "^3.4.1",
     "@types/node": "11.13.19",
     "typescript": "3.7.4"
   },
   "devDependencies": {
-    "@hypertype/core": "latest",
-    "@hypertype/tools": "latest",
+    "@hypertype/core": "^3.4.1",
+    "@hypertype/tools": "^3.4.1",
     "@types/node": "11.13.19",
     "typescript": "3.7.4"
   },
