--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,11 +31,13 @@
     "test": "tests"
   },
   "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(t|j)sx?$": "ts-jest"
+    },
     "globals": {
       "ts-jest": {
-        "tsConfig": "tests/tsconfig.json"
+        "tsConfig": "tests/tsconfig.json",
+        "diagnostics": false
       }
     }
   },
@@ -54,7 +56,8 @@
     "crc-32": "*",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.2",
-    "symbol-observable": "^1.2.0"
+    "symbol-observable": "^1.2.0",
+    "ts-jest": "^26.4.1"
   },
   "hypertype": {
     "lib": {
