--- a/packages/infr/tsconfig.json
+++ b/packages/infr/tsconfig.json
@@ -8,6 +8,10 @@
     "moduleResolution": "node",
     "declaration": true,
     "declarationDir": "./dist/typings",
-    "noEmitOnError": false
+    "noEmitOnError": false,
+    "types": ["node"],
+    "lib": [
+      "DOM"
+    ]
   }
 }
