--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,10 +7,7 @@
     "moduleResolution": "node",
     "declarationDir": "./dist/typings",
     "noEmitOnError": true,
-    "typeRoots": [
-      "@types",
-      "symbol-observable"
-    ]
+    "types": []
   },
   "include": [
     "**/*.ts"
