fix type errors 2

--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -13,8 +13,7 @@
       "ESNext"
     ],
     "types": [
-      "@types/sharedworker",
-      "@types/node"
+      "@types/sharedworker"
     ]
   },
   "include": [
