--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,10 +6,10 @@
     "declarationDir": "./dist/typings",
     "allowJs": true,
     "noEmitOnError": true,
-    "target": "es2018"
+    "target": "es2018",
+    "types": []
   },
   "include": [
-    "node_modules/hyperhtml-element",
     "**/*.ts",
     "**/*.js"
   ],
