--- a/packages/infr/tsconfig.json
+++ b/packages/infr/tsconfig.json
@@ -9,9 +9,6 @@
     "declaration": true,
     "declarationDir": "./dist/typings",
     "noEmitOnError": false,
-    "types": ["node"],
-    "lib": [
-      "DOM"
-    ]
+    "types": []
   }
 }
