--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,7 @@
     "tsc": "tsc -b --watch",
     "clean": "rm -rf dist",
     "bundle": "hypertype node --watch",
-    "prod": "hypertype node --prod",
+    "bundle:prod": "hypertype node --prod",
     "deploy": "npm version patch && npm publish"
   },
   "files": [
