--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,7 +36,6 @@
     "utf-8-validate"
   ],
   "dependencies": {
-    "canvas": "^2.6.1"
   },
   "devDependencies": {
     "@hypertype/core": "^3.4.22",
@@ -44,7 +43,7 @@
     "@hypertype/infr-node": "^3.4.22",
     "@hypertype/tools": "^3.4.22",
     "@types/express": "^4.17.0",
-    "@types/node": "^11.13.19",
+    "@types/node": "12.19.8",
     "@types/redis": "^2.8.14",
     "@types/workerpool": "^2.3.1",
     "@types/ws": "^6.0.2",
