upd typescript to 4.1.3

--- a/packages/infr/tsconfig.json
+++ b/packages/infr/tsconfig.json
@@ -10,5 +10,9 @@
     "declarationDir": "./dist/typings",
     "noEmitOnError": false,
     "types": []
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
