--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -25,18 +25,18 @@
     "@testdeck/jest": "0.0.6",
     "@types/chai": "^4.1.7",
     "@types/node": "12.19.8",
-    "awesome-typescript-loader": "^5.2.1",
+    "awesome-typescript-loader": "5.2.1",
     "chai": "^4.2.0",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.1.0",
+    "jest": "26.6.3",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mocha-typescript": "^1.1.17",
     "node-libs-browser": "^2.2.0",
     "string-loader": "0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "3.7.4",
+    "typescript": "4.1.3",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-dev-server": "^3.2.1",
