--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,7 +56,7 @@
     "@types/node": "12.19.8",
     "crc-32": "*",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.2",
+    "rxjs": "6.6.3",
     "symbol-observable": "^1.2.0",
     "ts-jest": "^26.4.1"
   },
