--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ttypescript": "^1.5.10"
   },
   "devDependencies": {
-    "lerna": "^3.19.0"
+    "lerna": "^3.19.0",
+    "typescript": "4.1.3"
   },
   "dependencies": {},
   "private": true,
