--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/core",
-  "version": "3.6.1",
+  "version": "3.6.15",
   "description": "",
   "main": "dist/esm/index.js",
   "bundle": "dist/bundle/index.js",
@@ -51,15 +51,15 @@
     "luxon": "^1.12.1"
   },
   "devDependencies": {
-    "@hypertype/tools": "^3.6.1",
+    "@hypertype/tools": "^3.6.15",
     "@types/luxon": "^1.12.0",
     "@types/node": "12.19.8",
     "crc-32": "*",
     "reflect-metadata": "^0.1.13",
     "rxjs": "6.6.3",
-    "ulid": "^2.3.0",
     "symbol-observable": "^1.2.0",
-    "ts-jest": "^26.4.1"
+    "ts-jest": "^26.4.1",
+    "ulid": "^2.3.0"
   },
   "hypertype": {
     "lib": {
