--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,8 @@
   "bundleDependencies": [
     "rxjs",
     "crc-32",
-    "reflect-metadata"
+    "reflect-metadata",
+    "ulid"
   ],
   "peerDependencies": {
     "luxon": "^1.12.1"
