--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "3.6.16",
+  "version": "3.6.17",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -21,25 +21,26 @@
     "build",
     "bin.js"
   ],
+  "peerDependencies": {
+    "typescript": "*"
+  },
   "dependencies": {
-    "@testdeck/jest": "0.0.6",
-    "@types/chai": "^4.1.7",
-    "@types/node": "12.19.8",
-    "awesome-typescript-loader": "5.2.1",
-    "chai": "^4.2.0",
-    "css-loader": "^2.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "26.6.3",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "node-libs-browser": "^2.2.0",
-    "string-loader": "0.0.1",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "4.1.3",
-    "webpack": "^4.29.3",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1"
+    "@testdeck/jest": "*",
+    "@types/chai": "4",
+    "@types/node": "14",
+    "chai": "4",
+    "css-loader": "4",
+    "html-webpack-plugin": "4",
+    "jest": "27",
+    "less": "4",
+    "less-loader": "4",
+    "node-libs-browser": "2.2.1",
+    "ts-loader": "8",
+    "tsconfig-paths-webpack-plugin": "3",
+    "webpack": "4",
+    "webpack-bundle-analyzer": "4",
+    "webpack-dev-server": "4",
+    "webpack-merge": "4"
   },
   "gitHead": "eef2660fa720e22277aa27b5d04ce1ee350865db"
 }
