--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -35,6 +35,7 @@
     "less": "4",
     "less-loader": "4",
     "node-libs-browser": "2.2.1",
+    "raw-loader": "4",
     "ts-loader": "8",
     "tsconfig-paths-webpack-plugin": "3",
     "webpack": "4",
