--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,7 +40,8 @@
     "@hypertype/core": "^3.6.28",
     "@hypertype/tools": "^3.6.24",
     "@types/node": "12.19.8",
-    "typescript": "4.1.3"
+    "typescript": "4.1.3",
+    "uhtml": "^2"
   },
   "hypertype": {
     "lib": {
