--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@hypertype/ui",
-  "version": "3.6.30",
+  "version": "3.6.30-uhtml2",
   "description": "",
   "main": "dist/index.js",
-  "es5": "dist/index.es5.js",
-  "es6": "dist/esm/index.js",
+  "browser": "dist/index.js",
+  "es6": "dist/index.js",
   "typings": "dist/typings/index.d.ts",
   "scripts": {
     "build": "tsc -b --watch",
@@ -36,12 +36,14 @@
     "@types/node": "12.19.8",
     "typescript": "4.1.3"
   },
+  "dependencies": {
+    "uhtml": "^2"
+  },
   "devDependencies": {
     "@hypertype/core": "^3.6.28",
     "@hypertype/tools": "^3.6.24",
     "@types/node": "12.19.8",
-    "typescript": "4.1.3",
-    "uhtml": "^2"
+    "typescript": "4.1.3"
   },
   "hypertype": {
     "lib": {
