abort fetch on unsubecribe

--- a/packages/infr-browser/package.json
+++ b/packages/infr-browser/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "tsc -b --watch",
     "bundle": "hypertype lib",
+    "watch": "hypertype lib --watch",
     "prod": "hypertype lib --prod",
     "deploy": "npm version patch && npm publish",
     "test": "jest"
