--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/ui",
-  "version": "3.6.30-uhtml4",
+  "version": "3.6.30",
   "description": "",
   "main": "dist/index.js",
   "browser": "dist/index.js",
