--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -5,21 +5,17 @@
   },
   "version": "3.7.1",
   "description": "",
-  "main": "index.js",
   "bin": {
-    "hypertype": "bin.js"
+    "hypertype": "./dist/bin.js"
   },
   "scripts": {
+    "build": "tsc -b",
     "deploy": "npm version patch && npm publish --access public"
   },
   "author": "",
   "license": "ISC",
   "files": [
-    "test",
-    "generate",
-    "plugins",
-    "build",
-    "bin.js"
+    "dist"
   ],
   "peerDependencies": {
     "typescript": "*"
